--- a/dashboard.html
+++ b/dashboard.html
@@ -85,6 +85,22 @@
             color: #e94560;
         }
 
+        .content-section p,
+        .content-section ul {
+            font-size: 18px;
+            line-height: 1.6;
+            margin-bottom: 20px;
+            color: #ccc;
+        }
+
+        .content-section ul {
+            padding-left: 20px;
+        }
+
+        .content-section ul li {
+            margin-bottom: 10px;
+        }
+
         .content-section label {
             display: block;
             margin-bottom: 10px;
@@ -131,17 +147,23 @@
 
         .assignment-item {
             background: #0f3460;
-            padding: 15px;
-            border-radius: 8px;
-            margin-bottom: 15px;
+            padding: 20px;
+            border-radius: 10px;
+            margin-bottom: 20px;
             display: flex;
+            flex-direction: column;
             justify-content: space-between;
-            align-items: center;
+            align-items: flex-start;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+            transition: transform 0.3s ease;
+        }
+
+        .assignment-item:hover {
+            transform: scale(1.02);
         }
 
         .assignment-item div {
-            flex-grow: 1;
+            width: 100%;
         }
 
         .assignment-item span {
@@ -155,6 +177,18 @@
             margin-top: 0;
             font-size: 16px;
             color: #ccc;
+            margin-bottom: 20px;
+        }
+
+        .assignment-item time {
+            font-size: 14px;
+            color: #bbb;
+        }
+
+        .assignment-actions {
+            display: flex;
+            justify-content: flex-end;
+            gap: 10px;
         }
 
         .assignment-actions button {
@@ -195,13 +229,14 @@
 
         <div id="main-welcome" class="content-section" style="display: none;">
             <h2>Welcome to Taskmatrix</h2>
-            <p>Taskmatrix is your personal dashboard to manage all your school assignments and class notifications. Here, you can:</p>
+            <p>Taskmatrix is your personal dashboard to manage all your school assignments and class notifications. With Taskmatrix, you can:</p>
             <ul>
-                <li>Track assignments and their due dates.</li>
-                <li>Keep notes for each assignment.</li>
-                <li>Set reminders for class timings and important deadlines.</li>
-                <li>Organize your academic life in one place.</li>
+                <li>Track and manage your assignments along with their due dates.</li>
+                <li>Keep detailed notes for each assignment to help you stay organized.</li>
+                <li>Set up and receive reminders for important class times and deadlines.</li>
+                <li>Organize all your academic activities in one centralized place.</li>
             </ul>
+            <p>Start by exploring the assignments or class notifications section to begin managing your tasks more efficiently.</p>
         </div>
 
         <div id="assignments" class="content-section" style="display: none;">
@@ -298,8 +333,8 @@
                 assignmentItem.innerHTML = `
                     <div>
                         <span><strong>Name:</strong> ${assignment.name}</span>
-                        <span><strong>Due Date:</strong> ${assignment.dueDate}</span>
-                        <span><strong>Created Date:</strong> ${assignment.createdDate}</span>
+                        <time><strong>Due Date:</strong> ${assignment.dueDate}</time>
+                        <time><strong>Created Date:</strong> ${assignment.createdDate}</time>
                         <p>${assignment.notes}</p>
                     </div>
                     <div class="assignment-actions">
